--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <div class="bg-pink-600 text-white py-2">
-    <div class="container mx-auto">
+    <div class="container mx-auto px-4">
         <span>Call Us: (647) 812-1179</span>
         <span class="float-right">Hours of Operation: 7:00AM to 6:00PM</span>
     </div>
