--- a/layouts/partials/staff.html
+++ b/layouts/partials/staff.html
@@ -1,5 +1,6 @@
 <div class="bg-white rounded-lg overflow-hidden shadow-sm text-center">
     {{ $img := resources.Get .photo }}
+    {{ $img = $img.Resize "x400 webp" }}
     <img src="{{ $img.RelPermalink }}" alt="" class="w-48 rounded-full mx-auto mt-6">
     <div class="p-6">
         <h3 class="text-2xl font-bold mb-1">
