--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,17 +8,15 @@
 
     <link rel="icon" type="image/png" href="/favicon.png">
 
-    {{ $options := dict "inlineImports" true }}
+    {{ $options := dict "inlineImports" true "noMap" true }}
     {{ $styles := resources.Get "styles/app.css" }}
     {{ $styles = $styles | resources.PostCSS $options }}
-    {{ if hugo.IsProduction }}
-    {{ $styles = $styles | minify | fingerprint | resources.PostProcess }}
-    {{ end }}
-    <link rel="stylesheet" href="{{ $styles.RelPermalink }}">
+    {{ $styles = $styles | resources.Fingerprint | resources.PostProcess }}
+    <link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}">
 
     {{ $scripts := resources.Get "scripts/main.ts" }}
     {{ $params := dict "GOOGLE_MAPS_API_KEY" (getenv "GOOGLE_MAPS_API_KEY") }}
     {{ $options := dict "minify" true "sourceMap" "inline" "params" $params }}
-    {{ $js := $scripts | js.Build $options }}
+    {{ $js := $scripts | js.Build $options | resources.Fingerprint }}
     <script src="{{ $js.RelPermalink }}" integrity="{{ $js.Data.Integrity }}" async></script>
 </head>
