--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,9 +42,9 @@
 <div class="py-20">
     <div class="container px-4 mx-auto">
         <div class="grid md:grid-cols-3 gap-6">
-            <div class="shadow rounded-lg text-xl text-center flex flex-col justify-around">
+            <div class="shadow rounded-lg prose-lg text-center flex flex-col justify-around">
                 <div class="text-center mt-4">
-                    <h1>Aurora</h1>
+                    <h2>Aurora</h2>
                     <div class="divider mx-auto"></div>
                 </div>
                 <address class="not-italic">
@@ -76,7 +76,7 @@
         </div>
         <div class="col-span-2 ml-10">
             <div class="h-full flex flex-col align-middle justify-center">
-                <h2 class="text-3xl font-extrabold">About Angelic Treasures Child Care</h2>
+                <h2 class="main-heading">About Angelic Treasures Child Care</h2>
                 <div class="divider"></div>
                 <p class="text-gray-600 mb-2">Angelic Treasures Child Care is where quality child care and education meets family values. From French offerings to age-appropriate activities, we offer an array of programs focused on your child’s social, cognitive, emotional, psychological, and physical development. Plus, we provide an unparalleled home-away-from-home environment to ensure your child has an enjoyable and comfortable learning experience.</p>
                 <p class="text-gray-600">We love your angels as much as you do, so it’s no wonder we’re the best at what we do.</p>
@@ -85,10 +85,10 @@
     </div>
 </div>
 
-<div class="bg-gradient py-20">
+<div class="bg-gradient py-20" id="facilities">
     <div class="container px-4 mx-auto">
         <div class="text-center pb-6">
-            <h2 class="text-3xl font-extrabold" id="facilities">See Our Facilities</h2>
+            <h2 class="main-heading">See Our Facilities</h2>
             <div class="divider mx-auto"></div>
         </div>
         <div class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -106,7 +106,7 @@
 <div class="py-20">
     <div class="container px-4 mx-auto">
         <div class="text-center pb-6">
-            <h2 class="text-3xl font-extrabold">Your Angelic Treasure Belongs Here</h2>
+            <h2 class="main-heading">Your Angelic Treasure Belongs Here</h2>
             <div class="divider mx-auto"></div>
         </div>
         <div class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -120,7 +120,7 @@
 <div class="bg-gradient py-20">
     <div class="container px-4 mx-auto">
         <div class="text-center pb-6">
-            <h2 class="text-3xl font-extrabold">Our Programs</h2>
+            <h2 class="main-heading">Our Programs</h2>
             <div class="divider mx-auto"></div>
         </div>
         <div class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -133,7 +133,7 @@
 
 <div class="container px-4 mx-auto py-20" id="faq">
     <div class="text-center pb-6">
-        <h2 class="text-3xl font-extrabold" id="faq">Frequently Asked Questions</h2>
+        <h2 class="main-heading" id="faq">Frequently Asked Questions</h2>
         <div class="divider mx-auto"></div>
     </div>
     <div class="bg-white mx-auto border border-gray-200" x-data="{ selected:null }">
@@ -168,7 +168,7 @@
 <div class="bg-gradient py-20" id="staff">
     <div class="container px-4 mx-auto">
         <div class="text-center pb-6">
-            <h2 class="text-3xl font-extrabold">Our Talented Team</h2>
+            <h2 class="main-heading">Our Talented Team</h2>
             <div class="divider mx-auto"></div>
         </div>
         <div class="grid grid-flow-row lg:grid-cols-3 gap-6">
@@ -181,7 +181,7 @@
 
 <div class="container mx-auto py-20" id="contact">
     <div class="text-center pb-6">
-        <h2 class="text-3xl font-extrabold">Get in Touch</h2>
+        <h2 class="main-heading">Book a Tour</h2>
         <div class="divider mx-auto"></div>
     </div>
     <div class="grid grid-flow-row lg:grid-cols-2">
