Add booking with Calendly

--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -27,26 +27,28 @@
                         <option>Kindergarten (4 - 5 years)</option>
                         <option>Before & After Care (5 - 10 years)</option>
                     </select> -->
-                    <label class="inline-flex items-center text-sm font-medium text-gray-700">
-                        <input type="checkbox" name="age" class="rounded mr-1">
-                        Infant (1 - 18 months)
-                    </label>
-                    <label class="inline-flex items-center text-sm font-medium text-gray-700">
-                        <input type="checkbox" name="age" class="rounded mr-1">
-                        Toddler (18 months - 2&half; years)
-                    </label>
-                    <label class="inline-flex items-center text-sm font-medium text-gray-700">
-                        <input type="checkbox" name="age" class="rounded mr-1">
-                        Preschool (2&half; - 4 years)
-                    </label>
-                    <label class="inline-flex items-center text-sm font-medium text-gray-700">
-                        <input type="checkbox" name="age" class="rounded mr-1">
-                        Kindergarten (4 - 5 years)
-                    </label>
-                    <label class="inline-flex items-center text-sm font-medium text-gray-700">
-                        <input type="checkbox" name="age" class="rounded mr-1">
-                        Before & After Care (5 - 10 years)
-                    </label>
+                    <div style="columns: 2;">
+                        <label class="inline-block text-sm font-medium text-gray-700">
+                            <input type="checkbox" name="age" class="rounded mr-1">
+                            Infant (1 - 18 months)
+                        </label>
+                        <label class="inline-block text-sm font-medium text-gray-700">
+                            <input type="checkbox" name="age" class="rounded mr-1">
+                            Toddler (18 months - 2&half; years)
+                        </label>
+                        <label class="inline-block text-sm font-medium text-gray-700">
+                            <input type="checkbox" name="age" class="rounded mr-1">
+                            Preschool (2&half; - 4 years)
+                        </label>
+                        <label class="inline-block text-sm font-medium text-gray-700">
+                            <input type="checkbox" name="age" class="rounded mr-1">
+                            Kindergarten (4 - 5 years)
+                        </label>
+                        <label class="inline-block text-sm font-medium text-gray-700">
+                            <input type="checkbox" name="age" class="rounded mr-1">
+                            Before & After Care (5 - 10 years)
+                        </label>
+                    </div>
                 </div>
 
                 <div class="mb-3">
