--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,6 @@
 <div class="relative bg-white">
     <div class="max-w-7xl mx-auto">
         <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32" x-data="{ open: false }">
-
             {{ partial "nav.html" . }}
 
             <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
@@ -29,7 +28,6 @@
                     </div>
                 </div>
             </main>
-
         </div>
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
@@ -60,9 +58,10 @@
                     </a>
                 </div>
             </div>
+            <div id="map" class="rounded shadow col-span-2"></div>
             {{ $map := resources.Get "images/map.png" }}
             {{ $map = $map.Resize "x1000 webp" }}
-            <img src="{{ $map.RelPermalink }}" alt="" class="w-full col-span-2 rounded-lg shadow" loading="lazy">
+            <!-- <img src="{{ $map.RelPermalink }}" alt="" class="w-full col-span-2 rounded-lg shadow" loading="lazy"> -->
         </div>
     </div>
 </div>
@@ -73,6 +72,7 @@
             {{ $img := resources.Get "images/untitled-280.jpg" }}
             {{ $img = $img.Resize "x600 webp" }}
             <img src="{{ $img.RelPermalink }}" alt="" class="rounded-lg shadow transform scale-90 rotate-6 translate-y-14">
+
             {{ $img := resources.Get "images/untitled-606.jpg" }}
             {{ $img = $img.Resize "x600 webp" }}
             <img src="{{ $img.RelPermalink }}" alt="" class="rounded-lg shadow transform scale-75 -rotate-6 translate-x-2 -translate-y-14">
@@ -156,8 +156,8 @@
                 <div class="relative overflow-hidden transition-all max-h-0 duration-700"
                      x-ref="container{{ $i }}"
                      :style="selected == {{ $i }} ? 'max-height: ' + $refs.container{{ $i }}.scrollHeight + 'px' : ''">
-                    <div class="p-6">
-                        <p>{{ $item.answer }}</p>
+                    <div class="p-6 px-8 prose max-w-none">
+                        <p>{{ markdownify $item.answer }}</p>
                     </div>
                 </div>
             </li>
@@ -165,8 +165,6 @@
         </ul>
     </div>
 </div>
-
-
 
 <div class="bg-gradient py-20" id="staff">
     <div class="container px-4 mx-auto">
@@ -187,14 +185,18 @@
         <h2 class="main-heading">Book a Tour</h2>
         <div class="divider mx-auto"></div>
     </div>
-    <div class="grid grid-flow-row lg:grid-cols-2">
+    <div class="grid grid-flow-row lg:grid-cols-2 gap-5">
         {{ partial "form.html" . }}
         <div>
-            <!-- Calendly inline widget begin -->
-            {{/* <div class="calendly-inline-widget" data-url="https://calendly.com/directoraurora/30min-facility-tour?hide_event_type_details=1&hide_gdpr_banner=1" style="height:700px;"></div> */}}
-            {{/*
-            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script> */}}
-            <!-- Calendly inline widget end -->
+            <a href="https://calendly.com/directoraurora/30min-facility-tour"
+               class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10"
+               target="_blank">
+                Via Calendly
+                <svg viewBox="7.4 0 344.6 360" xmlns="http://www.w3.org/2000/svg" class="ml-2 h-6 w-6" stroke="currentColor" fill="currentColor">
+                    <path d="m313.8 360h-268.3c-21 0-38.1-17.1-38.1-38.1v-268.4c0-21 17.1-38.1 38.1-38.1h268.3c21 0 38.1 17.1 38.1 38.1v268.3c.1 21.1-17 38.2-38.1 38.2zm-268.3-323.5c-9.4 0-17 7.6-17 17v268.3c0 9.4 7.6 17 17 17h268.3c9.4 0 17-7.6 17-17v-268.3c0-9.4-7.6-17-17-17z" />
+                    <path d="m256.6 72.4c-4.5 0-8.1-3.6-8.1-8.1v-56.2c0-4.5 3.6-8.1 8.1-8.1s8.1 3.6 8.1 8.1v56.1c0 4.5-3.6 8.2-8.1 8.2zm-154.7 0c-4.5 0-8.1-3.6-8.1-8.1v-56.2c0-4.5 3.6-8.1 8.1-8.1s8.1 3.6 8.1 8.1v56.1c.1 4.5-3.6 8.2-8.1 8.2zm87.5 181.4c-33.6 0-60.9-27.3-60.9-60.9s27.3-60.9 60.9-60.9c15.2 0 29.7 5.6 40.9 15.8 1.4 1.2 1.5 3.4.2 4.7-1.2 1.4-3.4 1.5-4.7.2-10-9.1-22.9-14.1-36.4-14.1-29.9 0-54.2 24.3-54.2 54.2s24.3 54.2 54.2 54.2c13.5 0 26.4-5 36.4-14.1 1.4-1.2 3.5-1.1 4.7.2 1.2 1.4 1.1 3.5-.2 4.7-11.2 10.4-25.7 16-40.9 16z" />
+                </svg>
+            </a>
         </div>
     </div>
 </div>
