--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,7 +40,7 @@
 <div class="py-20">
     <div class="container px-4 mx-auto">
         <div class="grid md:grid-cols-3 gap-6">
-            <div class="shadow rounded-lg prose-lg text-center flex flex-col justify-around">
+            <div class="shadow rounded-lg text-center flex flex-col justify-around">
                 <div class="text-center mt-4">
                     <h2>Aurora</h2>
                     <div class="divider mx-auto"></div>
@@ -51,11 +51,11 @@
                     Aurora, Ontario<br>
                     L4G 2N9
                 </address>
-                <span class="block mb-8">(647) 812-1179</span>
                 <div>
                     <a href="tel:6478121179" class="w-full px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-pink-400 hover:bg-pink-500 md:py-4 md:text-lg md:px-10">
                         Call Now
                     </a>
+                    <span class="block mt-8">(647) 812-1179</span>
                 </div>
             </div>
             <div id="map" class="rounded shadow col-span-2"></div>
