--- a/layouts/index.html
+++ b/layouts/index.html
@@ -46,8 +46,7 @@
                     <div class="divider mx-auto"></div>
                 </div>
                 <address class="not-italic">
-                    126 Wellington Street West<br>
-                    Unit 103<br>
+                    126 Wellington Street West #103<br>
                     Aurora, Ontario<br>
                     L4G 2N9
                 </address>
