--- a/layouts/index.html
+++ b/layouts/index.html
@@ -96,10 +96,7 @@
         <div class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-3 gap-6">
             {{ $images := resources.Match "images/facilities/*" }}
             {{ range $i := $images }}
-            <div class="shadow-sm">
-                {{ $resized := $i.Resize "x800 webp" }}
-                <img src="{{ $resized.RelPermalink }}" alt="" class="rounded-lg">
-            </div>
+            {{ partial "facility.html" . }}
             {{ end }}
         </div>
     </div>
