--- a/layouts/partials/program.html
+++ b/layouts/partials/program.html
@@ -1,7 +1,11 @@
 <div class="bg-white rounded-lg overflow-hidden shadow-sm">
-    {{ $img := resources.Get .image }}
-    {{ $img = $img.Resize "x600 webp" }}
-    <img src="{{ $img.RelPermalink }}" alt="">
+    {{ $original := resources.Get .image }}
+    <picture>
+        {{ $img := $original.Resize "x600 webp" }}
+        <source srcset="{{ $img.RelPermalink }}" type="image/webp">
+        {{ $img := $original.Resize "x600" }}
+        <img src="{{ $img.RelPermalink }}" alt="">
+    </picture>
     <div class="p-6">
         <h3 class="text-2xl font-bold mb-1">
             {{ htmlUnescape .name }}
