Fixes and refactoring

--- a/layouts/partials/facility.html
+++ b/layouts/partials/facility.html
@@ -1,4 +1,4 @@
-<div class="shadow rounded-lg overflow-hidden">
+<div class="shadow-sm rounded-lg overflow-hidden">
     <picture>
         {{ $img := .Resize "x600 webp" }}
         <source srcset="{{ $img.RelPermalink }}" type="image/webp">
