--- a/layouts/index.html
+++ b/layouts/index.html
@@ -32,12 +32,16 @@
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
         {{ $hero := resources.Get "images/hero.jpg" }}
-        {{ $hero = $hero.Resize "x1600 webp" }}
-        <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" src="{{ $hero.RelPermalink }}" alt="">
+        <picture class="flex h-56 w-full sm:h-72 md:h-96 lg:w-full lg:h-full">
+            {{ $img := $hero.Resize "x1600 webp" }}
+            <source srcset="{{ $img.RelPermalink }}" type="image/webp" class="object-cover">
+            {{ $img := $hero.Resize "x1600" }}
+            <img src="{{ $img.RelPermalink }}" alt="" class="object-cover block w-full">
+        </picture>
     </div>
 </div>
 
-<div class="py-20">
+<div class=" py-20">
     <div class="container px-4 mx-auto">
         <div class="grid md:grid-cols-3 gap-6">
             <div class="shadow rounded-lg text-center flex flex-col justify-around">
@@ -138,25 +142,7 @@
     <div class="bg-white mx-auto border border-gray-200" x-data="{ selected:null }">
         <ul class="shadow-box">
             {{ range $i, $item := $.Site.Data.faq }}
-            <li class="relative border-b border-gray-200">
-                <button type="button" class="w-full px-8 py-6 text-left" @click="selected !== {{ $i }} ? selected = {{ $i }} : selected = null">
-                    <div class="flex items-center justify-between">
-                        <span class="text-pink-500 text-lg font-bold mb-1">{{ $item.question }}</span>
-                        <span :class="{ 'transform rotate-180': selected == {{ $i }} }">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                                <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
-                            </svg>
-                        </span>
-                    </div>
-                </button>
-                <div class="relative overflow-hidden transition-all max-h-0 duration-700"
-                     x-ref="container{{ $i }}"
-                     :style="selected == {{ $i }} ? 'max-height: ' + $refs.container{{ $i }}.scrollHeight + 'px' : ''">
-                    <div class="p-6 px-8 prose max-w-none">
-                        <p>{{ markdownify $item.answer }}</p>
-                    </div>
-                </div>
-            </li>
+            {{ partial "faq.html" (dict "i" $i "item" $item) }}
             {{ end }}
         </ul>
     </div>
@@ -188,10 +174,9 @@
                class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10"
                target="_blank">
                 Via Calendly
-                <svg viewBox="7.4 0 344.6 360" xmlns="http://www.w3.org/2000/svg" class="ml-2 h-6 w-6" stroke="currentColor" fill="currentColor">
-                    <path d="m313.8 360h-268.3c-21 0-38.1-17.1-38.1-38.1v-268.4c0-21 17.1-38.1 38.1-38.1h268.3c21 0 38.1 17.1 38.1 38.1v268.3c.1 21.1-17 38.2-38.1 38.2zm-268.3-323.5c-9.4 0-17 7.6-17 17v268.3c0 9.4 7.6 17 17 17h268.3c9.4 0 17-7.6 17-17v-268.3c0-9.4-7.6-17-17-17z" />
-                    <path d="m256.6 72.4c-4.5 0-8.1-3.6-8.1-8.1v-56.2c0-4.5 3.6-8.1 8.1-8.1s8.1 3.6 8.1 8.1v56.1c0 4.5-3.6 8.2-8.1 8.2zm-154.7 0c-4.5 0-8.1-3.6-8.1-8.1v-56.2c0-4.5 3.6-8.1 8.1-8.1s8.1 3.6 8.1 8.1v56.1c.1 4.5-3.6 8.2-8.1 8.2zm87.5 181.4c-33.6 0-60.9-27.3-60.9-60.9s27.3-60.9 60.9-60.9c15.2 0 29.7 5.6 40.9 15.8 1.4 1.2 1.5 3.4.2 4.7-1.2 1.4-3.4 1.5-4.7.2-10-9.1-22.9-14.1-36.4-14.1-29.9 0-54.2 24.3-54.2 54.2s24.3 54.2 54.2 54.2c13.5 0 26.4-5 36.4-14.1 1.4-1.2 3.5-1.1 4.7.2 1.2 1.4 1.1 3.5-.2 4.7-11.2 10.4-25.7 16-40.9 16z" />
-                </svg>
+                <span class="ml-2 h-5 w-5">
+                    {{ readFile "assets/images/calendly.svg"| safeHTML }}
+                </span>
             </a>
         </div>
     </div>
