--- a/layouts/partials/program.html
+++ b/layouts/partials/program.html
@@ -1,4 +1,4 @@
-<div class="bg-white rounded-lg overflow-hidden shadow-sm">
+<div class="bg-white rounded-lg overflow-hidden shadow">
     {{ $original := resources.Get .image }}
     <picture>
         {{ $img := $original.Resize "x600 webp" }}
