--- a/layouts/partials/faq.html
+++ b/layouts/partials/faq.html
@@ -1,7 +1,7 @@
 <li class="relative border-b border-gray-200">
     <button type="button" class="w-full px-8 py-6 text-left focus:outline-none" @click="selected !== {{ .i }} ? selected = {{ .i }} : selected = null">
         <div class="flex items-center justify-between">
-            <span class="text-pink-500 text-lg font-bold mb-1">{{ .item.question }}</span>
+            <span class="text-pink-500 text-lg font-bold">{{ .item.question }}</span>
             <span :class="{ 'transform rotate-180': selected == {{ .i }} }" class="h-5 w-5">
                 {{ readFile "assets/images/chevron.svg" | safeHTML }}
             </span>
