--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="bg-gradient mt-5">
+<div class="bg-gradient">
     <div class="container mx-auto p-6">
         &copy;{{ now.Year }} Angelic Treasures Christian Childcare
     </div>
