--- a/layouts/index.html
+++ b/layouts/index.html
@@ -168,7 +168,7 @@
         <div class="divider mx-auto"></div>
     </div>
     <div class="grid grid-flow-row lg:grid-cols-6 gap-5">
-        <div class="col-span-2 text-gray-500">
+        <div class="col-span-2 text-gray-500 px-4 py-5 bg-white sm:p-6">
             <h4 class="text-xl text-black font-bold mb-2">Contact Information</h4>
 
             <p class="mb-2">Give us a call, follow us on social media or book a center tour using Calendly or the form.</p>
