--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -3,18 +3,18 @@
         <div class="px-4 py-5 bg-white sm:p-6">
 
             <div class="mb-3">
-                <label for="first_name" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Name of Parent</label>
-                <input type="text" name="first_name" id="first_name" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                <label for="name" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Name of Parent</label>
+                <input type="text" name="name" id="name" autocomplete="name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
             </div>
 
             <div class="mb-3">
-                <label for="email_address" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Email Address</label>
+                <label for="email" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Email Address</label>
                 <input type="text" name="email_address" id="email_address" autocomplete="email" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
             </div>
 
             <div class="mb-3">
-                <label for="street_address" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Phone Number</label>
-                <input type="text" name="street_address" id="street_address" autocomplete="street-address" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                <label for="phone" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Phone Number</label>
+                <input type="text" name="phone" id="phone" autocomplete="tel" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
             </div>
 
             <div class="mb-3">
