--- a/layouts/index.html
+++ b/layouts/index.html
@@ -162,17 +162,15 @@
     </div>
 </div>
 
-<div class="container mx-auto py-20" id="contact">
+<div class="container mx-auto px-4 py-20" id="contact">
     <div class="text-center pb-6">
         <h2 class="main-heading">Book a Tour</h2>
         <div class="divider mx-auto"></div>
     </div>
-    <div class="grid grid-flow-row lg:grid-cols-6 gap-5">
-        <div class="col-span-2 text-gray-500 px-4 py-5 bg-white sm:p-6">
+    <div class="grid grid-flow-row lg:grid-cols-3 gap-6">
+        <div class="text-gray-500 px-4 py-5 sm:p-6">
             <h4 class="text-xl text-black font-bold mb-2">Contact Information</h4>
-
             <p class="mb-2">Give us a call, follow us on social media or book a center tour using Calendly or the form.</p>
-
             <div class="flex items-center mb-2">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
@@ -181,20 +179,16 @@
                     (647) 812-1179
                 </span>
             </div>
-
             <a href="https://www.facebook.com/atcdAurora">
                 <svg class="h-6 w-6 inline-block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" fill="currentColor">
                     <path d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z"></path>
                 </svg>
             </a>
-
             <a href="https://www.instagram.com/angelic.treasures.aurora/">
                 <svg class="h-6 w-6 inline-block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" fill="currentColor">
                     <path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path>
                 </svg>
             </a>
-
-
             <a href="https://calendly.com/directoraurora/30min-facility-tour"
                class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10"
                target="_blank">
@@ -204,7 +198,7 @@
                 </span>
             </a>
         </div>
-        <div class="col-span-4">
+        <div class="col-span-2">
             {{ partial "form.html" . }}
         </div>
     </div>
