--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -1,22 +1,18 @@
 <form method="POST" id="contact" netlify>
-    <div class="shadow overflow-hidden sm:rounded-md">
-        <div class="px-4 py-5 bg-white sm:p-6">
-
+    <div class="shadow overflow-hidden rounded-lg">
+        <div class="px-4 py-5 sm:p-6 bg-white">
             <div class="mb-3">
                 <label for="name" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Name of Parent</label>
                 <input type="text" name="name" id="name" autocomplete="name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
             </div>
-
             <div class="mb-3">
                 <label for="email" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Email Address</label>
                 <input type="text" name="email_address" id="email_address" autocomplete="email" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
             </div>
-
             <div class="mb-3">
                 <label for="phone" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Phone Number</label>
                 <input type="text" name="phone" id="phone" autocomplete="tel" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
             </div>
-
             <div class="mb-3">
                 <label for="age" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Age of your Children</label>
                 <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
@@ -40,7 +36,6 @@
                     Before & After (5&ndash;10 years)
                 </label>
             </div>
-
             <div class="mb-3">
                 <label for="age" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Type of Tour</label>
                 <label class="inline-flex items-center text-sm font-medium text-gray-700">
@@ -53,7 +48,6 @@
                 </label>
             </div>
         </div>
-
         <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
             <button type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-400 hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                 Get in Touch
