--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <div class="bg-gradient">
     <div class="container mx-auto p-6">
-        &copy;{{ now.Year }} Angelic Treasures Christian Childcare
+        &copy;{{ now.Year }} Angelic Treasures Christian Daycare
     </div>
 </div>
