--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,12 +12,12 @@
                         <span class="block text-blue-400 xl:inline">belongs here</span>
                     </h1>
                     <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                        We are committed to provide quality child care and education for young children of all faiths and backgrounds. Angelic Treasures provides an environment that will not only be an enjoyable learning experience, but will foster the development of your children’s social, cognitive, emotional, psychological and physical growth.
+                        We provide quality child care, before & after and summer camps for young children of all faiths and backgrounds.
                     </p>
                     <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
                         <div class="rounded-full shadow">
-                            <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-pink-400 hover:bg-pink-500 md:py-4 md:text-lg md:px-10">
-                                Get started
+                            <a href="#programs" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-pink-400 hover:bg-pink-500 md:py-4 md:text-lg md:px-10">
+                                Our Programs
                             </a>
                         </div>
                         <div class="mt-3 sm:mt-0 sm:ml-3">
@@ -41,7 +41,7 @@
     </div>
 </div>
 
-<div class=" py-20">
+<div class="py-20">
     <div class="container px-4 mx-auto">
         <div class="grid md:grid-cols-3 gap-6">
             <div class="shadow rounded-lg text-center flex flex-col justify-around">
@@ -120,7 +120,7 @@
     </div>
 </div>
 
-<div class="bg-gradient py-20">
+<div class="bg-gradient py-20" id="programs">
     <div class="container px-4 mx-auto">
         <div class="text-center pb-6">
             <h2 class="main-heading">Our Programs</h2>
