--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,7 +8,7 @@
 
     <link rel="icon" type="image/png" href="/favicon.png">
 
-    {{ $options := dict "inlineImports" true "noMap" true }}
+    {{ $options := dict "noMap" true }}
     {{ $styles := resources.Get "styles/app.css" }}
     {{ $styles = $styles | resources.PostCSS $options | minify | fingerprint | resources.PostProcess }}
     <link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}">
