New form design

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -4,10 +4,11 @@
 
 .bg-gradient {
     background: linear-gradient(#d7eaff, #ffe1ef);
+    @apply border;
 }
 
 #map {
-    height: 500px;
+    min-height: 250px;
 }
 
 .main-heading {
