--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
-<div class="bg-gradient">
-    <div class="container mx-auto p-6">
+<div class="bg-gray-50 border">
+    <div class="container mx-auto p-6 text-gray-600 text-sm">
         &copy;{{ now.Year }} Angelic Treasures Christian Daycare
     </div>
 </div>
