--- a/layouts/index.html
+++ b/layouts/index.html
@@ -41,7 +41,7 @@
     </div>
 </div>
 
-<div class="py-20">
+<!-- <div class="py-20">
     <div class="container px-4 mx-auto">
         <div class="grid md:grid-cols-3 gap-6">
             <div class="shadow rounded-lg text-center flex flex-col justify-around">
@@ -64,10 +64,10 @@
             <div id="map" class="rounded shadow col-span-2"></div>
             {{ $map := resources.Get "images/map.png" }}
             {{ $map = $map.Resize "x1000 webp" }}
-            <!-- <img src="{{ $map.RelPermalink }}" alt="" class="w-full col-span-2 rounded-lg shadow" loading="lazy"> -->
+            <img src="{{ $map.RelPermalink }}" alt="" class="w-full col-span-2 rounded-lg shadow" loading="lazy">
         </div>
     </div>
-</div>
+</div> -->
 
 <div class="container mx-auto">
     <div class="grid lg:grid-cols-3">
@@ -163,46 +163,45 @@
 </div>
 
 <div class="container mx-auto px-4 py-20" id="contact">
-    <div class="text-center pb-6">
-        <h2 class="main-heading">Book a Tour</h2>
-        <div class="divider mx-auto"></div>
-    </div>
     <div class="grid grid-flow-row lg:grid-cols-3 gap-6">
-        <div class="text-gray-500 px-4 py-5 sm:p-6">
-            <h4 class="text-xl text-black font-bold mb-2">Contact Information</h4>
-            <p class="mb-2">Give us a call, follow us on social media or book a center tour using Calendly or the form.</p>
-            <div class="mb-2">
-                <a href="tel:6478121179" class="flex items-center">
-                    <div class="h-6 w-6 mr-2">
-                        {{ readFile "assets/images/phone.svg" | safeHTML }}
-                    </div>
-                    <span>(647) 812-1179</span>
-                </a>
+        <div class="text-gray-500 flex flex-col col-span-1">
+            <div>
+                <h4 class="text-xl text-black font-bold mb-2">Contact Information</h4>
+                <p class="mb-4">We can't wait to see you! Give us a call or follow us on social media for center updates, or reach out to schedule a tour.</p>
+                <div class="mb-2">
+                    <a href="tel:6478121179" class="flex items-center">
+                        <div class="h-6 w-6 mr-2">
+                            {{ readFile "assets/images/phone.svg" | safeHTML }}
+                        </div>
+                        <span>647-812-1179</span>
+                    </a>
+                </div>
+                <div class="mb-2">
+                    <a href="https://www.instagram.com/angelic.treasures.aurora/" target="_blank" class="flex items-center">
+                        <div class="h-6 w-6 mr-2">
+                            {{ readFile "assets/images/instagram.svg" | safeHTML }}
+                        </div>
+                        @angelic.treasures.aurora
+                    </a>
+                </div>
+                <div class="mb-5">
+                    <a href="https://www.facebook.com/atcdAurora" target="_blank" class="flex items-center">
+                        <div class="h-6 w-6 mr-2">
+                            {{ readFile "assets/images/facebook.svg" | safeHTML }}
+                        </div>
+                        atcdaurora
+                    </a>
+                </div>
             </div>
-            <div class="flex items-center mb-2">
-                <a href="https://www.facebook.com/atcdAurora" target="_blank" class="flex items-center">
-                    <div class="h-6 w-6 mr-2">
-                        {{ readFile "assets/images/facebook.svg" | safeHTML }}
-                    </div>
-                    atcdaurora
-                </a>
-            </div>
-            <div class="flex items-center mb-2">
-                <a href="https://www.instagram.com/angelic.treasures.aurora/" target="_blank" class="flex items-center">
-                    <div class="h-6 w-6 mr-2">
-                        {{ readFile "assets/images/instagram.svg" | safeHTML }}
-                    </div>
-                    angelic.treasures.aurora
-                </a>
-            </div>
-            <a href="https://calendly.com/directoraurora/30min-facility-tour"
+            <div id="map" class="flex-grow rounded-lg shadow"></div>
+            <!-- <a href="https://calendly.com/directoraurora/30min-facility-tour"
                class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10"
                target="_blank">
                 Via Calendly
                 <span class="ml-2 h-5 w-5">
                     {{ readFile "assets/images/calendly.svg" | safeHTML }}
                 </span>
-            </a>
+            </a> -->
         </div>
         <div class="col-span-2">
             {{ partial "form.html" . }}
