--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -1,20 +1,24 @@
 <form method="POST" id="contact" netlify>
     <div class="shadow overflow-hidden rounded-lg">
+        <div class="text-center pt-6">
+            <h2 class="main-heading">Book a Tour</h2>
+            <div class="divider mx-auto"></div>
+        </div>
         <div class="px-4 py-5 sm:p-6 bg-white">
-            <div class="mb-3">
-                <label for="name" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Name of Parent</label>
+            <div class="mb-4">
+                <label for="name" class="block text-xs mb-2 font-medium text-gray-500 uppercase">Name of Parent</label>
                 <input type="text" name="name" id="name" autocomplete="name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
             </div>
-            <div class="mb-3">
-                <label for="email" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Email Address</label>
+            <div class="mb-4">
+                <label for="email" class="block text-xs mb-2 font-medium text-gray-500 uppercase">Email Address</label>
                 <input type="text" name="email_address" id="email_address" autocomplete="email" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
             </div>
-            <div class="mb-3">
-                <label for="phone" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Phone Number</label>
+            <div class="mb-4">
+                <label for="phone" class="block text-xs mb-2 font-medium text-gray-500 uppercase">Phone Number</label>
                 <input type="text" name="phone" id="phone" autocomplete="tel" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
             </div>
-            <div class="mb-3">
-                <label for="age" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Age of your Children</label>
+            <div class="mb-4">
+                <label for="age" class="block text-xs mb-2 font-medium text-gray-500 uppercase">Age of your Children</label>
                 <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
                     <input type="checkbox" name="age" class="rounded mr-2">
                     Infant (1&ndash;18 months)
@@ -36,8 +40,8 @@
                     Before & After (4&ndash;12 years)
                 </label>
             </div>
-            <div class="mb-3">
-                <label for="age" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Type of Tour</label>
+            <div class="mb-4">
+                <label for="age" class="block text-xs mb-2 font-medium text-gray-500 uppercase">Type of Tour</label>
                 <label class="inline-flex items-center text-sm font-medium text-gray-700">
                     <input type="radio" class="form-radio" name="accountType" value="inperson">
                     <span class="ml-2">In-person</span>
@@ -49,7 +53,7 @@
             </div>
         </div>
         <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
-            <button type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-400 hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <button class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-400 hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                 Get in Touch
             </button>
         </div>
