--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,11 +1,11 @@
 <div class="bg-pink-600 text-white py-2">
-    <div class="container mx-auto px-4 text-sm">
+    <div class="container mx-auto px-4 text-sm flex items-center justify-between">
         <div class="inline-flex items-center">
             <span class="h-5 w-5 mr-1">
                 {{ readFile "assets/images/phone.svg" | safeHTML }}
             </span>
             <span>(647) 812-1179</span>
         </div>
-        <span class="float-right">Weekdays 7:00AM to 6:00PM</span>
+        <span>Weekdays 7:00AM to 6:00PM</span>
     </div>
 </div>
